Scalability setting added